--- a/kotha-ide/public/index.html
+++ b/kotha-ide/public/index.html
@@ -43,10 +43,17 @@
             <div class="editor-container">
                 <div class="line-numbers" id="line-numbers">1</div>
                 <textarea id="code-editor" spellcheck="false">main function {
-    dhoro x = 10;
-    dhoro y = 20;
-    dekhaw("Hello from Kotha IDE!");
-    dekhaw(x + y);
+    // Type casting and typeof()!
+    purno x = 42;
+    doshomik y = purno_to_doshomik(x);
+    bornona s = purno_to_bornona(x);
+    
+    dekhaw("Int: " + x);
+    dekhaw("Float: " + y);
+    dekhaw("String: " + s);
+    
+    dekhaw("Type of x: " + typeof(x));
+    dekhaw("Type of y: " + typeof(y));
 }</textarea>
             </div>
 
